--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
 
         <activity android:name=".ui.activity.ImageActivity">
         </activity>
+        <activity android:name=".ui.activity.AboutActivity">
+        </activity>
     </application>
 
 </manifest>
