扩展：共享元素动画优化，添加图片来源信息

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
             android:value="GlideModule"
             tools:node="remove"/>
 
-        <activity android:name=".ui.activity.ImageActivity">
+        <activity android:name=".ui.activity.ImageActivity"
+                  android:theme="@style/ViewerTheme">
         </activity>
         <activity android:name=".ui.activity.AboutActivity">
         </activity>
