--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     //工具类
     //https://github.com/Blankj/AndroidUtilCode
     compile 'com.blankj:utilcode:1.3.4'
+    //下拉刷新 上拉加载更多
+    //https://github.com/scwang90/SmartRefreshLayout
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.2'
 }
 repositories {
     mavenCentral()
