--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,13 @@
             android:value="GlideModule"
             tools:node="remove"/>
 
-        <activity android:name=".ui.activity.ImageActivity"
-                  android:theme="@style/ViewerTheme">
+        <activity
+            android:name=".ui.activity.ImageActivity"
+            android:theme="@style/ViewerTheme">
         </activity>
         <activity android:name=".ui.activity.AboutActivity">
+        </activity>
+        <activity android:name=".ui.activity.WebViewActivity">
         </activity>
     </application>
 
